--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content=" initial-scale=1.0">
-    <title>GrowBox</title>
+    <title>V-High</title>
     <link rel="stylesheet" href="css/style.css" type="text/css">
 </head>
 <body>
